# ccpm

./: .gitignore  Cargo.toml
.github/workflows/: scanner.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: bundles.rs  claude_settings.rs  config.rs  importer.rs  library.rs  mcps.rs  mod.rs  presets.rs  recent_projects.rs  recipes.rs  scan_existing.rs  skills.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: activator.rs  baseline.rs  config.rs  error.rs  fs.rs  importer.rs  installer.rs  lib.rs  library.rs  mcp.rs  recipes.rs  registry.rs  repair.rs  scan_existing.rs  skills.rs  state.rs  types.rs
crates/core/tests/: integration.rs
docs/superpowers/plans/: 2026-04-27-recipe-and-library-model.md  2026-04-28-macos-workbench-design-system.md  2026-05-05-skill-mcp-source-parity.md
docs/superpowers/specs/: 2026-04-27-recipe-and-library-model.md  2026-04-28-macos-workbench-design-system-design.md
preset-registry/: index.json  translations.json
preset-registry/.github/workflows/: scanner.yml
preset-registry/bundles/: index.json
preset-registry/mcps/: index.json
preset-registry/mcps/brave-search/: mcp.json
preset-registry/mcps/fetch/: mcp.json
preset-registry/skills/: index.json
(+5965 files in other folders)
