[package]
name = "claude-preset-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "claude_preset_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-preset-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
ccpm-core = { path = "../../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"
